@@ -99,13 +99,16 @@ bool strbuf_reserve( strbuf_t *sbuf, size_t res_len ) {
   return false;
 }
 
+void strbuf_sepsn( strbuf_t *sbuf, char const *sep, size_t sep_len,
+                   bool *sep_flag ) {
+  assert( sep_flag != NULL );
+  if ( true_or_set( sep_flag ) )
+    strbuf_catsn( sbuf, sep, sep_len );
+}
+
 void strbuf_sepsn_catsn( strbuf_t *sbuf, char const *sep, size_t sep_len,
                          bool *sep_flag, char const *s, size_t s_len ) {
-  assert( sep_flag != NULL );
-  if ( true_or_set( sep_flag ) ) {
-    strbuf_reserve( sbuf, sep_len + s_len );
-    strbuf_catsn( sbuf, sep, sep_len );
-  }
+  strbuf_sepsn( sbuf, sep, sep_len, sep_flag );
   strbuf_catsn( sbuf, s, s_len );
 }
 
