@@ -1,0 +1,3 @@
+inline namespace A::B { typedef int Int; }
+                 ^
+18: error: nested namespace can not be inline
