@@ -1,0 +1,1 @@
+namespace A::inline B::C { typedef int Int; }
