@@ -1,0 +1,1 @@
+namespace A::inline B { typedef int Int; }
