@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ define I of inline namespace B of namespace A as int; show typedef @ 0
