@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ namespace A::inline B::C { typedef int Int; }; show typedef @ 0
